smoke file is too big, I'm going to fix it

--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ body {
   background-repeat: repeat-x, no-repeat;
   background-size: 60%, 30%;
   background-position: -5rem 5rem, 0 13rem;
-  animation: animateSmoke 4s linear infinite;
+  animation: animateSmoke 6s linear infinite;
 }
 
 @keyframes animateSmoke {
